<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


    <TextView
        android:id="@+id/losungsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_losung_losungSmallText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:autoLink="web"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/currentLosungContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_losung_losung"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentLosungVersContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_losung_losungsvers"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lehrtextsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/section_losung_lehrtextSmallText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/currentLehrtextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_losung_lehrtext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentLehrtextVersContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_losung_lehrtextvers"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fragment_main_losungen_herrenhuter1TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/url_losungen_herrenhuter1" />

    <TextView
        android:id="@+id/fragment_main_losungen_herrenhuter2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/url_losungen_herrenhuter2" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>
  