<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detaildialog_wtag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_wtag"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/detaildialog_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/detaildialog_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/personalinformationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_personalinformation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/zusatzinfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_detaildialog_zusatzinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox_DetailDialog_Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_termine_detaildialog_checkboxremember" />

    <Spinner
        android:id="@+id/detaildialog_whennotify_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/listArray_disp"
	    android:entryValues="@array/listValues"/>

</LinearLayout>
