<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_main_setup_usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_main_setup_usernameTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dialog_main_setup_usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_main_setup_usernameET_hint"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/dialog_main_setup_main_groupsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_main_setup_groupsTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/dialog_main_setup_main_groupsLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
