<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/item_wochentag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/section_termine_wtag"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/item_datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/item_wochentag"
        android:text="@string/section_termine_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/item_zeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/item_datum"
        android:text="@string/section_termine_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/item_Tagesleitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_zeit"
        android:layout_alignBottom="@+id/item_zeit"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/item_datum"
        android:text="Name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/item_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_datum"
        android:layout_alignLeft="@+id/item_Tagesleitung"
        android:text="Event"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>